# sproto

./: README.md  pyproject.toml
scripts/: training.py
sproto/dataset/: outcome.py
sproto/metrics/: metrics.py
sproto/model/: multi_proto.py
sproto/utils/: utils.py
