[tool.poetry]
name = "sproto"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "sproto"}]

[tool.poetry.dependencies]
python = "^3.8.1,<3.9"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"
tensorboard = "^2.10.1"
fire = "^0.4.0"
matplotlib = "^3.6.1"
transformers = "4.25.1"
torch = "^1.12.1"
torchmetrics = "^0.10.1"
zarr = "^2.13.3"
pydantic = "^1.10.2"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
optuna = "^3.3.0"
pytorch-lightning = "1.9"

[tool.poetry.scripts]
train = "scripts.training:start"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
ruff = "^0.0.146"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py38"
line-length = 100
